fixed reactive spacing on login page

--- a/ProducePoint/src/App.css
+++ b/ProducePoint/src/App.css
@@ -163,6 +163,11 @@ h4 {
 }
 
 /* Login & Registration Page */
+.registration-login-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
 .login-link {
   color: var(--secondary);
   text-decoration: underline;
@@ -174,9 +179,14 @@ h4 {
   justify-content: space-between;
 }
 
-.regis-page {
+.p-4{
   padding: 20px;
-  
+  margin-left: 20px;
+  grid-column: 1/2;
+}
+
+.deco-container {
+  grid-column: 2/3;
 }
 
 /* Navbar */
@@ -232,37 +242,37 @@ h4 {
   align-items: center;
 }
 .deco-one{
-  height: 70em;
-  bottom: -60em;
-  right: -20em;
+  height: 70vw;
+  bottom: -60vw;
+  right: -20vw;
 }
 
 .deco-two{
-  height: 40em;
-  top: -20em;
-  right: -20em;
+  height: 40vw;
+  top: -20vw;
+  right: -20vw;
 }
 
 .deco-three{
-  height: 10em;
-  top: 5em;
-  right: 37em;
+  height: 10vw;
+  top: 5vw;
+  right: 37vw;
 }
 
 .deco-four{
-  height: 12em;
-  top: 9em;
-  right: 30em;
+  height: 12vw;
+  top: 9vw;
+  right: 30vw;
 }
 .deco-five{
-  height: 5em;
-  top: 30em;
-  right: 45em;
+  height: 5vw;
+  top: 30svw;
+  right: 45vw;
 }
 
 .deco-six{
-  height: 3em;
-  top: 25em;
-  right: 20em;
+  height: 3vw;
+  top: 25vw;
+  right: 20vw;
 }
 
